--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
     "react-native-vector-icons": "^10.2.0",
-    "expo-haptics": "~14.0.0"
+    "expo-haptics": "~14.0.0",
+    "expo-av": "~15.0.1",
+    "expo-sensors": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
