--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
     "@expo-google-fonts/livvic": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/sofia": "^0.2.3",
-    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.0",
     "expo": "~52.0.18",
-    "expo-app-loading": "^2.1.1",
+    "expo-av": "~15.0.1",
+    "expo-dev-client": "~5.0.6",
     "expo-font": "~13.0.1",
+    "expo-haptics": "~14.0.0",
+    "expo-sensors": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "lucide-react-native": "^0.468.0",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-gesture-handler": "^2.21.2",
-    "react-native-reanimated": "^3.16.5",
-    "react-native-safe-area-context": "^5.0.0",
-    "react-native-screens": "^4.3.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-haptics": "~14.0.0",
-    "expo-av": "~15.0.1",
-    "expo-sensors": "~14.0.1"
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.25.2"
   },
   "private": true
 }
