--- a/eas.json
+++ b/eas.json
@@ -9,7 +9,7 @@
     "development": {
       "distribution": "internal",
       "android": {
-        "buildType": "app-bundle"  
+        "buildType": "apk"  
       }
     },
     "production": {
