--- a/app.json
+++ b/app.json
@@ -32,6 +32,7 @@
       "eas": {
         "projectId": "ecc008d3-e387-4d31-83e2-d157838497ba"
       }
-    }
+    },
+    "assetBundlePatterns": ["**/*"]
   }
 }
