--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
+  "resolutions": {
+     "promise": "8.3.0"
+   },
   "dependencies": {
     "@expo-google-fonts/livvic": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
