--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo-google-fonts/sofia": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/firestore": "^21.6.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.0",
@@ -27,15 +29,19 @@
     "expo-direct-call": "github:aguglie/expo-direct-call",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-permissions": "^14.4.0",
     "expo-sensors": "~14.0.1",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "^4.0.6",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webrtc": "^124.0.4",
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
